--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "npx nodemon server.js",
     "seed": "node seeds/seed.js"
   },
   "keywords": [],
@@ -22,6 +22,7 @@
     "handlebars": "^4.7.8",
     "inquirer": "^8.2.4",
     "mysql2": "^2.2.5",
+    "nodemon": "^3.0.3",
     "sequelize": "^6.3.5"
   }
 }
